PR/41602

Fix a memory leak when ohci_device_setintr didn't return
USBD_NORMAL_COMPLETION.

ohci_setup_isoc always returns USBD_NORMAL_COMPLETION at the moment so
there's no chance of a leak there.